<resources>
    <string name="app_name">买盐</string>
    <string name="splash">遇事不决\n可问春风</string>
    <string name="rmb">¥</string>
    <string name="xx">*</string>
    //注册
    <string name="regist">注册</string>
    <string name="regist_hint">验证码5分钟内有效，请勿重复提交</string>
    <string name="regist_get_code">获取验证码</string>
    <string name="regist_input_number">请输入手机号</string>
    <string name="regist_input_code">请输入验证码</string>
    <string name="regist_input_psw">请输入密码</string>
    <string name="regist_input_psw_again">请再次输入密码</string>

    //登录
    <string name="login">登录</string>
    <string name="login_input_number">请输入手机号码</string>
    <string name="login_save_info">保存账号信息</string>
    <string name="login_forget_psw">忘记密码?</string>
    //修改密码
    <string name="revise_psw">修改密码</string>
    <string name="revise_input_newpsw">请输入新密码</string>
    <string name="revise_confirm_newpsw">请确认新密码</string>
    <string name="revise_cofirm">确认修改</string>
    <string name="login_agreement">登录即代表您已阅读并同意以下协议</string>
    <string name="login_agreement_user_agreement">《买盐网平台用户服务协议》</string>
    <string name="login_agreement_privacy_policy">《买盐网平台隐私政策》</string>
    <string name="home_two_ranking_index">综合排序</string>
    <string name="home_two_ranking_sales_volume">销量</string>
    <string name="home_two_ranking_range">距离</string>
    <string name="enter_agreement"> 勾选即代表同意&#060;&#060;入驻协议&#062;&#062;</string>
    <string name="about_us">北京买盐网络科技有限公司\nCopyright © 2016 - 2019.All Rights Reserved.</string>
    <string name="guide_string">立即体验即代表你同意买盐的</string>
    //商户中心管理
    <string name="business_time">是否开启24小时营业</string>
    <string name="business_notice">门店公告字数不可超过120字</string>
    <string name="business_summary">门店简介字数不可超过120字</string>
    <string name="business_title_hint">请输入您要修改的门店名称，并上传举证照片</string>
    <string name="business_qualifications_hint">请注意证件照片上的文字能够清晰可见</string>
    <string name="business_qualifications_1">营业执照正本</string>
    <string name="business_qualifications_2">营业执照副本</string>
    <string name="business_qualifications_hint_1">·营业执照正本</string>
    <string name="business_qualifications_hint_2">·营业执照副本</string>
    <string name="business_qualifications_3">身份证人像面</string>
    <string name="business_qualifications_4">身份证国徽面</string>
    <string name="business_qualifications_hint_3">·身份证人像面</string>
    <string name="business_qualifications_hint_4">·身份证国徽面</string>
    <string name="business_qualifications_5">食盐生产许可\n证正本</string>
    <string name="business_qualifications_6">食盐生产许可\n证副本</string>
    <string name="business_qualifications_7">食盐批发许可\n证正本</string>
    <string name="business_qualifications_8">食盐批发许可\n证副本</string>
    <string name="business_qualifications_9">食盐准运证&#160;&#160;&#160;&#160;</string>
    <string name="business_qualifications_hint_5">·食盐生产许可证正本</string>
    <string name="business_qualifications_hint_6">·食盐生产许可证副本</string>
    <string name="business_qualifications_hint_7">·食盐批发许可证正本</string>
    <string name="business_qualifications_hint_8">·食盐批发许可证副本</string>
    <string name="business_qualifications_hint_9">·食盐准运证</string>

    <string name="business_add_goods_sugg">建议照片大小:375*450(1M以内)</string>
    <string name="business_add_goods_detail">请上传商品详情图</string>

    //订单
    <string name="myorder_all">全部</string>
    <string name="myorder_wait_pay">待付款</string>
    <string name="myorder_wait_send">待发货</string>
    <string name="myorder_wait_receive">待收货</string>
    <string name="myorder_wait_appraise">待评价</string>
    <string name="myorder_total_prices">共%s件货品 总价¥ %s</string>


</resources>
