<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp100"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp20"
        android:paddingRight="@dimen/dp20">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_input_number"
                style="@style/et_input_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/login_input_number"
                android:inputType="number"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp0_5"
            android:layout_marginTop="@dimen/dp5"
            android:background="@color/colorGray3" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_input_psw"
                style="@style/et_input_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp20"
                android:background="@null"
                android:hint="@string/regist_input_psw"
                android:inputType="numberPassword"
                android:maxLength="18"
                android:maxLines="1"
                android:padding="@dimen/dp5" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp0_5"
            android:layout_marginTop="@dimen/dp5"
            android:background="@color/colorGray3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:gravity="center"
            android:orientation="horizontal">

            <com.suke.widget.SwitchButton
                android:id="@+id/btn_switch"
                app:sb_checked="true"
                android:layout_width="@dimen/dp50"
                android:layout_height="@dimen/dp28"
                app:sb_checked_color="@color/colorPrimary" />

            <TextView
                android:layout_width="@dimen/dp0"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp5"
                android:layout_weight="1"
                android:text="@string/login_save_info" />

            <TextView
                android:id="@+id/tv_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_forget_psw" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp20"
            android:background="@drawable/shape_bg_regist_button"
            android:gravity="center"
            android:paddingTop="@dimen/dp10"
            android:paddingBottom="@dimen/dp10"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp16" />

        <TextView
            android:id="@+id/tv_login_regist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp20"
            android:background="@drawable/shape_bg_login_regist"
            android:gravity="center"
            android:paddingTop="@dimen/dp10"
            android:paddingBottom="@dimen/dp10"
            android:text="@string/regist"
            android:textColor="@color/colorGray2"
            android:textSize="@dimen/sp16" />

        <TextView
            android:id="@+id/tv_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp15" />
    </LinearLayout>
</LinearLayout>