<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/tv_appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp24"
        android:textStyle="bold" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:layout_width="@dimen/dp70"
        android:layout_height="@dimen/dp70"
        android:layout_above="@id/tv_appname"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp10"
        android:src="@mipmap/logo"
        app:riv_corner_radius="@dimen/dp10" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_appname"
        android:layout_marginTop="@dimen/dp10"
        android:gravity="center"
        android:text="@string/about_us"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp100"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/stroke_bg_revise_nick_name"
            android:gravity="center"
            android:paddingLeft="@dimen/dp100"
            android:paddingTop="@dimen/dp10"
            android:paddingRight="@dimen/dp100"
            android:paddingBottom="@dimen/dp10"
            android:text="立即体验"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_guide_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_start"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp10"
            android:text="@string/guide_string"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp12" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_user_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="《隐私协议》"
                android:textColor="@color/picture_color_fa632d" />

            <TextView
                android:id="@+id/tv_privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="《用户协议》"
                android:textColor="@color/picture_color_fa632d" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>