<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:elevation="@dimen/dp3">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/tool_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <include
                layout="@layout/layout_home_two_hearder_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp45"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.8" />

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp45"
                android:background="@android:color/white"
                app:contentInsetStart="10dp"
                app:layout_collapseMode="pin">

                <include
                    android:id="@+id/layout_open"
                    layout="@layout/layout_home_two_header_open" />

                <include
                    android:id="@+id/layout_close"
                    layout="@layout/layout_home_two_header_close" />
            </androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGray1"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/dp10"
                android:paddingTop="@dimen/dp10"
                android:paddingRight="@dimen/dp10"
                android:paddingBottom="@dimen/dp10">

                <CheckedTextView
                    android:id="@+id/tv_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/home_two_ranking_index"
                    android:textColor="@color/home_two_check_tv_red"
                    android:textSize="@dimen/sp12"
                    android:textStyle="bold" />

                <CheckedTextView
                    android:id="@+id/tv_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp15"
                    android:layout_marginLeft="@dimen/dp15"
                    android:text="@string/home_two_ranking_sales_volume"
                    android:textColor="@color/home_two_check_tv_red"
                    android:textSize="@dimen/sp12"
                    android:textStyle="bold" />

                <CheckedTextView
                    android:id="@+id/tv_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp15"
                    android:layout_marginLeft="@dimen/dp15"
                    android:text="@string/home_two_ranking_range"
                    android:textColor="@color/home_two_check_tv_red"
                    android:textSize="@dimen/sp12"
                    android:textStyle="bold" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp25"
                    android:background="@android:color/white" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp10"
                    android:layout_marginRight="@dimen/dp10"
                    android:contentDescription="@string/home_two_ranking_index"
                    android:src="@mipmap/home_two_jpg" />
            </FrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>